tests/field/get_on_int.rev
123.bar // error: only structure instances have properties